--- a/sentenceLib-vue/src/main.html
+++ b/sentenceLib-vue/src/main.html
@@ -8,7 +8,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
-    <title></title>
+    <title>句型库工具</title>
     <style>
         #app{
             height:100%;
